<resources>
    <string name="app_name">Hospital Management Application</string>
    <string name="navigationSignUp"><u>Not Registered Yet , Sign Up !</u></string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="type_your_email">Type your Email</string>
    <string name="forget_password">Forget Password?</string>
    <string name="sign_in">Sign In</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="welcome">Welcome</string>
    <string name="type_your_password">Type Your Password</string>
    <string name="todo">TODO</string>
    <string name="item_label">Please select Government or Private</string>
</resources>